# tech-challenge-fase-2

./: .gitignore  README.md  pyproject.toml
data/: X_test.parquet  y_test.parquet  y_train.parquet
docs/: issues_sprint.md  pipeline_plan.md
notebooks/: 01_AG.ipynb  02_AG_threshold040.ipynb  03_AG_expanded_search.ipynb  04_AG_smote.ipynb  05_AG_random_forest.ipynb  06_co_evolution.ipynb  07_scenario_comparison.ipynb
results/: AG_resultados_resumo.md
results/metrics/: 01_ag_comparison.csv  01_ag_comparison_recall052.csv  01_ag_comparison_recall07.csv  02_ag_comparison_040_recall08.csv  03_comparison_8genes_recall08.csv  04_comparison_smote.csv  05_comparison_rf.csv  06_ag_coevo_comparison.csv
src/: cleaning.py  constants.py  pipeline_factory.py  schemas.py  transformers.py
src/utils/: experiment_utils.py
